--- a/FileService/appsettings.json
+++ b/FileService/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImageDirectory": ".\\Images",
+  "UserImageDirectory": "user-content",
+  "SupportedImageFormats": "jpeg,png"
 }
