Images folder created by running project and images added to this

--- a/FileService/appsettings.json
+++ b/FileService/appsettings.json
@@ -11,5 +11,5 @@
   "AllowedHosts": "*",
   "ImageDirectory": ".\\Images",
   "UserImageDirectory": "user-content",
-  "SupportedImageFormats": "jpeg,png"
+  "SupportedImageFormats": "jpeg,png,jpg"
 }
