some refactor added

--- a/FileService/appsettings.json
+++ b/FileService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cs": "Data Source=C:\\Sqlite\\filedb.db"
+    "cs": "Data Source=C:\\Sqlite\\filedb2.db"
   },
   "Logging": {
     "LogLevel": {
@@ -9,7 +9,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ImageDirectory": ".\\Images",
+  "ImageDirectory": "images",
   "UserImageDirectory": "user-content",
   "SupportedImageFormats": "jpeg,png,jpg"
 }
